# crawling-api

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  samconfig.template.yaml  template.yaml
events/: event.json
src/: main.py
src/router/v1/: router.py
src/router/v1/endpoints/: crawl.py
src/schema/: crawl.py
